feat: 엘라스틱 서치 삭제